<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">

    <LinearLayout
        android:id="@+id/chapters_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/Back"
            android:onClick="goToMain"
            android:src="?attr/homeAsUpIndicator" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <TextView
            android:id="@+id/action_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/Settings">
        </TextView>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Space
            android:layout_width="50dp"
            android:layout_height="50dp" >
        </Space>

    </LinearLayout>

    <Switch
        android:id="@+id/notification_switch"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_below="@+id/chapters_topbar"
        android:text="@string/Notifications" />

    <Button
        android:id="@+id/user_guide_btn"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:onClick="goToUserGuide"
        android:layout_below="@+id/notification_switch"
        android:text="@string/User_Guide" />


</RelativeLayout>